fixed the store - pay attention to the index of the app, which has changed slightly. there is no router wrapping around the app anymore.

--- a/mausritter/src/App.css
+++ b/mausritter/src/App.css
@@ -20,7 +20,7 @@
 .wrapper {
   width: 40%;
   margin: 0 auto;
-  background-color: #d89e75;
+  background-color: #e0be74;
   padding: 20px;
   border: 5px solid #a55f2d;
   border-radius: 15px;
